--- a/InventoryManagement-soa/src/main/resources/application.properties
+++ b/InventoryManagement-soa/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/inventory-management?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+
+
+SWAGGER_TOKEN_URL=http://localhost:6363/oauth/token
+API_VERSION = 1
