--- a/InventoryManagement-soa/src/main/resources/application.properties
+++ b/InventoryManagement-soa/src/main/resources/application.properties
@@ -7,5 +7,8 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 
+
+server.port=6363
+
 SWAGGER_TOKEN_URL=http://localhost:6363/oauth/token
 API_VERSION = 1
