--- a/InventoryManagement-soa/src/main/resources/application.properties
+++ b/InventoryManagement-soa/src/main/resources/application.properties
@@ -10,3 +10,13 @@ server.port=6363
 
 SWAGGER_TOKEN_URL=http://localhost:6363/oauth/token
 API_VERSION = 1
+
+
+
+#AWC Configuration
+BUCKET_NAME=jarvis-portfolio
+AWS_ACCESS_KEY=AKIAQMMEKIXNOUIISNP4
+AWS_SECRETE_KEY=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
+FOLDER=Profile/
+FOLDER_USER_IMAGES=User/
+SECRETE=secret
