--- a/InventoryManagement-soa/pom.xml
+++ b/InventoryManagement-soa/pom.xml
@@ -78,6 +78,12 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.11.325</version>
+		</dependency>
 
 	</dependencies>
 
