comments and bug fixing

--- a/InventoryManagement-soa/src/main/resources/application.properties
+++ b/InventoryManagement-soa/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/inventory-management?createDat
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 server.port=6363
@@ -11,12 +11,3 @@ server.port=6363
 SWAGGER_TOKEN_URL=http://localhost:6363/oauth/token
 API_VERSION = 1
 
-
-
-#AWC Configuration
-BUCKET_NAME=jarvis-portfolio
-AWS_ACCESS_KEY=AKIAQMMEKIXNOUIISNP4
-AWS_SECRETE_KEY=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
-FOLDER=Profile/
-FOLDER_USER_IMAGES=User/
-SECRETE=secret
